frontend/tests/cases/negative/security/security-and-linearity.gr
-- last checked 2019-01-07 by @buggymcbugfix

-- @buggymcbugfix thinks this should be disallowed
dub : ∀ {a : Type} . a [Private] → (a, a)
dub [x] = (x,x)
